--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "discord": "^0.8.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
